<resources>
    <string name="app_name">My Cocktails</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">My cocktails</string>
    <string name="title_edit_text">Title</string>
    <string name="add_title">Add title</string>
    <string name="optional_field">Optional field</string>
    <string name="description_edit_text">Description</string>
    <string name="recipe_edit_text">Recipe</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_ingredient_title">Add ingredient</string>
    <string name="ingredient_edit_text">Ingredient</string>
    <string name="add_ingredient_label">Add ingredient</string>
    <string name="add_button">Add</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="add_new_cocktail">Add New Cocktail</string>
    <string name="recipe_for_description">Recipe:</string>
</resources>