<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/add_ingredient_title"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilIngredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:boxCornerRadiusBottomEnd="34dp"
            app:boxCornerRadiusBottomStart="34dp"
            app:boxCornerRadiusTopEnd="34dp"
            app:boxCornerRadiusTopStart="34dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <EditText
                android:id="@+id/etIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/didact_gothic"
                android:hint="@string/ingredient_edit_text"
                android:textColor="@color/color_edit_text"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvIngredientLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/add_ingredient_label"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tilIngredient"
            app:layout_constraintTop_toBottomOf="@id/tilIngredient" />

        <Button
            android:id="@+id/btnAddIngredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/color_background_button_save"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/add_button"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/tvIngredientLabel" />

        <Button
            android:id="@+id/btnCancelIngredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/cancel_button"
            android:textColor="@color/color_background_button_save"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/btnAddIngredient" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>